syntax = "proto3";

package category;

message Category{
  string id = 1;
  string name = 2;
  string description = 3;
  bytes imageBytes = 4;
  repeated string tags = 5;
  int64 createdAt = 6;
  int64 updatedAt = 7;
}

message AddCategoryRequest {
  Category category = 1;
}

message AddCategoryResponse {
  string id = 1;
}

message GetCategoryByIdRequest {
  string id = 1;
}

message GetCategoryByIdResponse {
  Category category = 1;
}

message GetCategoriesRequest {
  int64 skip = 1;
  int64 limit = 2;
}

message GetCategoriesResponse {
  repeated Category categories = 1;
}

message GetCategoriesByTagsRequest {
  repeated string tags = 1;
  int64 skip = 2;
  int64 limit = 3;
}

message GetCategoriesByTagsResponse {
  repeated Category categories = 1;
}

message UpdateCategoryRequest {
  Category category = 1;
}

message UpdateCategoryResponse {
  Category category = 1;
}

message RemoveCategoryRequest {
  string id = 1;
}

message RemoveCategoryResponse {
  string id = 1;
}

service CategoryService {
  rpc addCategory(AddCategoryRequest) returns (AddCategoryResponse);
  rpc getCategoryById(GetCategoryByIdRequest) returns (GetCategoryByIdResponse);
  rpc getCategories(GetCategoriesRequest) returns (GetCategoriesResponse);
  rpc getCategoriesByTags(GetCategoriesByTagsRequest) returns (GetCategoriesByTagsResponse);
  rpc updateCategory(UpdateCategoryRequest) returns (UpdateCategoryResponse);
  rpc removeCategory(RemoveCategoryRequest) returns (RemoveCategoryResponse);
}